<resources>
    <string name="successful">Successfully marked as favourites</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="api_key">AIzaSyCCt7zkM6FJAd5y5AmpPfDHJsFn2azAeQM</string>
    <string name="app_name">Drive User</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">146247962744663</string>
    <string name="fb_login_protocol_scheme">fb146247962744663</string>
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
    <string name="error_could_not_connect">Could not connect to server. Please try again later.</string>
    <string name="error_cannot_create_account">Account already exists!</string>
    <string name="error_cannot_sign_in">Please provide correct Email and Password</string>
    <string name="crash_toast_text">Sorry for inconvenience, we will get this issue fixed!</string>
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">Please check your internet connection</string>
    <string name="common.months">months</string>
    <string name="common.weeks">weeks</string>
    <string name="common.days">days</string>
    <string name="common.hrs">hrs</string>
    <string name="common.mins">mins</string>
    <string name="common.secs">secs</string>
    <string name="common.ago">ago</string>
    <string name="typeface_not_found">Typeface %$1 not found, or could not be loaded.
        Showing default typeface.</string>
    <string name="app">AnyTextView</string>
    <string name="assets_fonts_folder">fonts/</string>
    <string name="txt_enter_phone_no">Enter Phone No.</string>
    <string name="txt_enter_email_address">Enter Email Address <font fgcolor="#75000000">(Optional)</font></string>
    <string name="txt_register_text">Verificaion process is required to verify the phone no.</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here">  Click Here</string>
    <string name="imgdesc_signup">Sign Up</string>
    <string name="imgdesc_signin">Sign In</string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="remember_me">remember me</string>
    <string name="login">Login</string>
    <string name="user_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search Ads, User or Category</string>
    <string name="password_sent">Your password will be sent to your \nemail address</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="reason_for_rejection">REASON</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="via_email">Via Email</string>
    <string name="via_sms">Via SMS</string>
    <string name="tell_a_friend">TELL A FRIEND</string>
    <string name="contact_email">contact@voltas.com</string>
    <string name="contact_phone">5555 555 555</string>
    <string name="enter_text">Enter Text</string>
    <string name="you_paid">YOU PAID</string>
    <string name="tap_to_rate">TAP A STAR TO RATE DRIVER</string>
    <string name="contact_address">Columbus College of Arts, New York</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="lorem_ipsum_small">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s</string>
    <string name="this_is_login_fragment">This is Login Fragment</string>
    <string name="reset_password">Reset Password</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="new_user_create_account">New to Drive? Sign Up Now</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_conform_password">Enter Confirm Password</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_valid_password">Enter Valid Password</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="enter_valid_number_error">Enter Valid Number</string>
    <string name="create_account">Sign Up Now</string>
    <string name="enter_e_mail_address_which_you_used_at_the_time_of_signup">Enter E-mail Address which you used at the time of Signup</string>
    <string name="submit">Submit</string>
    <string name="forgot_password_heading">Forgot Password</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="reset_password_message">An email has been sent to your account with password reset link</string>
    <string name="reset">Reset</string>
    <string name="we_ll_text_you_a_code_to_confirm_your_number">We\'ll text you a code to Confirm your number</string>
    <string name="dummy_number">9741 4507 600</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="a_verification_code_has_been_send_to_your_mobile_phone">A verification code has been sent to your mobile phone and email</string>
    <string name="reset_code">Resend Code</string>
    <string name="where_to">Where to...</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="confirm">Confirm</string>
    <string name="API_KEY">AIzaSyCCt7zkM6FJAd5y5AmpPfDHJsFn2azAeQM</string>
    <string name="enter_username">Enter UserName</string>
    <string name="enter_contactUs">Fill the contact form first</string>
    <string name="enter_currentAddress">Enter Current Address</string>
    <string name="enter_zipCode">Enter Zip Code</string>
    <string name="enter_dob">Enter Date Of Birth</string>
    <string name="passwordLength">Password should be more than 7</string>
    <string name="samePassword">New password should be changed from previous password</string>
    <string name="numberLength">Number should be more than 12</string>
    <string name="enter_email">Enter Valid Email</string>
    <string name="to_accept"> to accept </string>
    <string name="terms_and_condition"> <u>Terms and Conditions</u></string>
    <string name="i_have_read_the_term_and_conditions">  I have read the </string>
    <string name="terms_conditons">Terms and Conditions</string>
    <string name="connection_lost">No Internet Found</string>
    <string name="set_pickup_location">SET PICKUP LOCATION</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="no_data">No Data To Show</string>
    <string name="verification_code">Verification Code</string>
    <string name="Messages">Messages</string>
    <string name="Change_Password">Change Password</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="Invite_and_earn"><![CDATA[Invite & Earn]]></string>
    <string name="share_this_invite_code_with_your_nfriends_and_earn_free_rides">Share this invite code with your \n friends and earn free rides!</string>
    <string name="ride_later">Ride Later</string>
    <string name="ride_now">Ride Now</string>
    <string name="internet_not_connected">Internet not Available</string>
    <string name="gps_question">Location is turned of Do you want to enable it ?</string>
    <string name="gps_yes">Yes</string>
    <string name="gps_no">No</string>
    <string name="wifi_question">No Network found  Do you want to enable Wifi ?</string>
    <string name="popular">Popular</string>
    <string name="fares_are_high_due_to_high_demand">Fares are high due to high demand</string>
    <string name="done">Done</string>
    <string name="estimated_fare">Estimated Fare</string>
    <string name="estimated_fare_">Estimated Fare:</string>
    <string name="capacity">Capacity</string>
    <string name="smaller_smater_cheaper_rides">Smaller, smater, cheaper rides</string>
    <string name="finding_your_ride">Finding Your Ride</string>
    <string name="connecting_with_nearest_driver">Connecting with nearest driver...</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="destination_location">Destination Location</string>
    <string name="drive_with_fastcab">Drive with Drive</string>
    <string name="fastcab">Drive</string>
    <string name="set_location_on_map">Set Location on Map</string>
    <string name="Contact_Us">Contact Us</string>
    <string name="are_you_sure_you_want_to_cancel_ride">Are you sure you want to cancel ride?</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="request_for_cancellation">Reason For Cancellation</string>
    <string name="rides">Rides</string>
    <string name="miles">Miles</string>
    <string name="rating">Rating</string>
    <string name="Ride_Feedback">Ride Feedback</string>
    <string name="driving">Driving</string>
    <string name="comfort">Comfort</string>
    <string name="navigation">Navigation</string>
    <string name="car_quality">Car Quality</string>
    <string name="what_could_be_improved">What could be improved?</string>
    <string name="others_specify">Others Specify</string>
    <string name="type_your_message_here">Type your message here....</string>
    <string name="comment">Comment...</string>
    <string name="rate_app">Rate App</string>
    <string name="rate">Rate</string>
    <string name="rate_last">Rate Your Last Trip</string>
    <string name="rate_driver">Rate Driver</string>
    <string name="submit_rating">Submit Ratings</string>
    <string name="promo_code">Promo Code</string>
    <string name="request_go">Request Go</string>
    <string name="Your_Trips">Your Trips</string>
    <string name="notification">Notifications</string>
    <string name="your_trips">Your Trips</string>
    <string name="payment">Payment</string>
    <string name="contact">Contact</string>
    <string name="about_us">About Us</string>
    <string name="male">Male</string>
    <string name="font_normal">Poppins-Regular_1.ttf</string>
    <string name="font_bold_roboto">Roboto-Bold.ttf</string>
    <string name="welcome_to_drive">WELCOME TO DRIVE</string>
    <string name="safe_fast_text">Safe, fast and comfortable</string>
    <string name="driver_preference">Driver Preference</string>
    <string name="female">Female</string>
    <string name="any">Any</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="language">Language</string>
</resources>