<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drive_bg2"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/drive_logo1"
        tools:ignore="ContentDescription" />

    <com.ingic.driveuser.ui.views.AnyTextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/heading2"
        android:gravity="center"
        android:text="@string/welcome_to_drive"
        android:textColor="@color/app_golden2"
        android:textSize="@dimen/x22"
        app:typeface="@string/font_bold_roboto"/>

    <com.ingic.driveuser.ui.views.AnyTextView
        android:id="@+id/heading2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/x15"
        android:layout_marginTop="@dimen/x5"
        android:gravity="center"
        android:text="@string/safe_fast_text"
        android:textColor="@color/app_offwhite"
        android:textSize="@dimen/x14"
        app:typeface="@string/font_normal"/>


</RelativeLayout>