<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/x20"
    >
    <ImageView
        android:id="@+id/iv_LogoIcon"
        android:layout_width="@dimen/x150"
        android:layout_height="@dimen/x150"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/x20"
        android:layout_marginTop="@dimen/x10"
        android:contentDescription="@string/api_key"
        android:src="@drawable/drive_logo1" />

    <LinearLayout
        android:id="@+id/ll_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:layout_below="@+id/iv_LogoIcon"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_emailIcon"
            android:layout_width="@dimen/x20"
            android:layout_height="@dimen/x20"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x5"
            android:contentDescription="@string/api_key"
            android:src="@drawable/drive_phone2" />

        <com.ingic.driveuser.ui.views.AnyEditTextView
            android:id="@+id/edtphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x9"
            android:layout_marginRight="@dimen/x20"
            android:layout_marginTop="@dimen/x2"
            android:background="@android:color/transparent"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:hint="@string/dummy_number"
            android:maxLength="16"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/x14"
            app:testType="email"
            app:typeface="Roboto-Regular.ttf" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginEnd="@dimen/x5"
        android:layout_marginStart="@dimen/x5"
        android:layout_marginTop="@dimen/x3"
        android:layout_below="@+id/ll_email"
        android:alpha="0.6"
        android:background="@color/lineViewColor" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/x40"
        android:layout_centerVertical="true"
        android:layout_below="@+id/ll_email"
        android:background="@drawable/rounded_button"
        android:text="@string/submit"
        android:layout_marginTop="@dimen/x20"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <com.ingic.driveuser.ui.views.AnyTextView
        android:id="@+id/txtResetPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
       android:layout_below="@+id/btn_submit"
        android:alpha="0.7"
        android:gravity="center"
        android:layout_marginTop="@dimen/x15"
        android:text="@string/we_ll_text_you_a_code_to_confirm_your_number"
        android:textColor="@color/white"
        android:textSize="@dimen/x14"
        app:typeface="Roboto-Regular.ttf" />
</RelativeLayout>